Fixs z-index

--- a/src/front-end/scss/components/directory/_directory-menu.scss
+++ b/src/front-end/scss/components/directory/_directory-menu.scss
@@ -4,7 +4,7 @@
 {
 	@include box-shadow(4px 0 2px rgba(0, 0, 0, 0.2), -1px 0 2px rgba(0, 0, 0, 0.2));
 
-	z-index: 4000;
+	z-index: 20;
 	overflow-y:hidden; 
 
 	@media #{$medium-and-up} 
