--- a/src/front-end/scss/components/directory/info-bar/_info-bar.scss
+++ b/src/front-end/scss/components/directory/info-bar/_info-bar.scss
@@ -1,7 +1,7 @@
 #element-info-bar
 {
     height:0px;    
-    z-index: 440;
+    z-index: 10;
     position: relative;   
     
     will-change:height;
